--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <img src="placeholder-link" alt="Header Logo">
-            <a href="https://www.google.com">header link one</a>
-            <a href="https://www.google.com">header link two</a>
-            <a href="https://www.google.com">header link three</a>
+            <ul>
+                <li><a href="https://www.google.com">header link one</a></li>
+                <li><a href="https://www.google.com">header link two</a></li>
+                <li><a href="https://www.google.com">header link three</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <div class="media">
             <div class="media-text">
-                <div>This website is awesome</div>
-                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="primary">This website is awesome</div>
+                <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button type="button">Sign up</button>
             </div>
             <img src="placeholder-link" alt="this is a placeholder for an image">
