--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="placeholder-link" alt="Header Logo">
+            <img src="./images/pexels-frank-cone-2235130.jpg" alt="Header Logo">
             <ul>
                 <li><a href="https://www.google.com">header link one</a></li>
                 <li><a href="https://www.google.com">header link two</a></li>
@@ -25,39 +25,41 @@
                 <div class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                 <button type="button">Sign up</button>
             </div>
-            <img src="placeholder-link" alt="this is a placeholder for an image">
+            <img src="./images/pexels-frank-cone-2235130.jpg" alt="this is a placeholder for an image">
         </div>
         <div class="info">
-            <div>Some random information.</div>
+            <div class="info-header">Some random information.</div>
             <div class="card-container">
                 <div class="card">
-                    <img src="placeholder-link" alt="this is a placeholder for an image">
+                    <img src="./images/pexels-jonathan-cooper-9723176.jpg" alt="this is a placeholder for an image">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="placeholder-link" alt="this is a placeholder for an image">
+                    <img src="./images/pexels-jonathan-cooper-9723176.jpg" alt="this is a placeholder for an image">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="placeholder-link" alt="this is a placeholder for an image">
+                    <img src="./images/pexels-jonathan-cooper-9723176.jpg" alt="this is a placeholder for an image">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="card">
-                    <img src="placeholder-link" alt="this is a placeholder for an image">
+                    <img src="./images/pexels-jonathan-cooper-9723176.jpg" alt="this is a placeholder for an image">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
         <div class="quote-container">
-            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. -Thor, God of Thunder</div>
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-sig">-Thor, God of Thunder</div>
         </div>
-        <div class="banner-container">
-            <div class="text-container">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking the button right over there!</div>
+        <div class="banner">
+            <div>
+                <div class="banner-header">Call to action! It's time!</div>
+                <div class="banner-info">Sign up for our product by clicking the button right over there!</div>
             </div>
             <button type="button">Sign up</button>
         </div>
+        
     </main>
     <footer>
         <div>Copyright © The Odin Project 2021</div>
